--- a/.gitignore
+++ b/.gitignore
@@ -29,10 +29,17 @@ next-env.d.ts
 # archives locales à ne pas versionner
 lifeclock-project.zip
 
+# macOS
+.DS_Store
+**/.DS_Store
+public/.DS_Store
+
 # lockfiles non utilisés
 package-lock.json
 
 # ebooks dupliqués (servir depuis public/books uniquement)
+app/books/*.pdf
+app/bonus/new-testament/*.pdf
 public/books/ebook-*.pdf
 !public/books/ebook-7.pdf
 public/books/book-*.pdf
