chore: push local changes (skip hooks)

--- a/env.example
+++ b/env.example
@@ -7,6 +7,7 @@ SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 LIFECLOCK_PRICE_ID=price_your_price_id
+PAY_COOKIE_SECRET=your-random-long-secret
 
 # Application
 NEXT_PUBLIC_BASE_URL=https://lifeclock.quest
