--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
+    "react-pdf": "^10.2.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
     "resend": "^6.4.0",
