Add external PDF hosting support with redirect links
- Add PDF_CONFIG system to support external URLs (Supabase, S3, R2, etc.)
- Transform download buttons into redirect links for external PDFs
- Update PDFModal to support external URLs via externalUrl prop
- Add environment variables for base URL or individual PDF URLs
- Add fallback to local /pdfs/ files if no external URLs configured
- Update env.example with PDF hosting configuration examples
- Add comprehensive documentation in docs/EXTERNAL_PDF_HOSTING.md

--- a/env.example
+++ b/env.example
@@ -25,10 +25,21 @@ RESEND_FROM_EMAIL=noreply@lifeclock.quest
 ADMIN_EMAIL=admin@lifeclock.quest
 CRON_SECRET=your-cron-secret-key
 
-# Sentry (optionnel)
+# Sentry (optional)
 NEXT_PUBLIC_SENTRY_DSN=your-sentry-dsn
 SENTRY_DSN=your-sentry-dsn
 SENTRY_ORG=your-sentry-org
 SENTRY_PROJECT=your-sentry-project
 SENTRY_AUTH_TOKEN=your-sentry-auth-token
+
+# External PDF Hosting (optional)
+# If set, PDFs will be served from external URLs instead of local /public/pdfs/
+# Option 1: Base URL for all PDFs (e.g., Supabase Storage, S3, Cloudflare R2)
+# NEXT_PUBLIC_PDF_BASE_URL=https://xxx.supabase.co/storage/v1/object/public/pdfs
+# NEXT_PUBLIC_PDF_BASE_URL=https://yourbucket.s3.amazonaws.com/pdfs
+# 
+# Option 2: Individual PDF URLs (overrides BASE_URL for specific files)
+# NEXT_PUBLIC_PDF_1_URL=https://external-url.com/ebook-1.pdf
+# NEXT_PUBLIC_PDF_2_URL=https://external-url.com/ebook-2.pdf
+# ... (NEXT_PUBLIC_PDF_3_URL through NEXT_PUBLIC_PDF_10_URL)
 
